third_party/move/move-compiler-v2/tests/checking/typing/neq_invalid.exp

Diagnostics:
error: invalid call of `!=`: expected `u8` but found `u128` for argument 2
   ┌─ tests/checking/typing/neq_invalid.move:13:9
   │
13 │         (0: u8) != (1: u128);
   │         ^^^^^^^^^^^^^^^^^^^^

error: invalid call of `!=`: expected `bool` but found `integer` for argument 2
   ┌─ tests/checking/typing/neq_invalid.move:14:9
   │
14 │         0 != false;
   │         ^

error: unable to infer type: `M::G0<?4>`
   ┌─ tests/checking/typing/neq_invalid.move:26:9
   │
26 │         G0{} != G0{};
   │         ^^^^

error: invalid call of `!=`: tuples have different arity (3 != 2) for argument 2
   ┌─ tests/checking/typing/neq_invalid.move:34:9
   │
34 │         (1, 2, 3) != (0, 1);
   │         ^^^^^^^^^^^^^^^^^^^

error: invalid call of `!=`: tuples have different arity (2 != 3) for argument 2
   ┌─ tests/checking/typing/neq_invalid.move:35:9
   │
35 │         (0, 1) != (1, 2, 3);
   │         ^^^^^^^^^^^^^^^^^^^
